# computer-use

./: .gitignore  CLAUDE.md  README.md  api_keys.txt.example  config.example.yaml  model_config.example.json  pyproject.toml  setup_service.py
dashboard/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: INSTALL-macos.md  frame-filter-rules.md
installer/: build.py  verify_build.py  workflow_recorder.iss  workflow_recorder.spec
server/: __init__.py  analysis_pool.py  api_keys.py  app.py  auth.py  auth_router.py  db.py  frame_grouper.py  frames_router.py  group_analysis.py  image_storage.py  models.py  permissions.py  session_finalizer.py  sessions_router.py  sop_feedback_router.py  sops_router.py  stats_router.py  users_router.py
tests/: conftest.py  test_action_mapper.py  test_analysis_pool.py  test_api_keys_loader.py  test_auth.py  test_auth_api.py  test_config.py  test_cursor_focus.py  test_deduplication.py  test_drop_idle_duplicate.py  test_frame_analysis.py  test_frame_grouper.py  test_frame_pusher.py  test_frames_router.py  test_group_analysis.py  test_idle_detector.py  test_image_storage.py  test_image_uploader.py  test_init_wizard.py  test_motion_aware_capture.py  test_permissions.py  test_privacy.py  test_prompts.py  test_reference_store.py  test_retry.py  test_schema.py  test_screenshot.py  test_server_db.py  test_session_finalizer.py  test_session_pipeline_integration.py  test_sessions_api.py  test_sop_feedback_api.py  test_sops_api.py  test_stats_api.py  test_storage.py  test_users_api.py  test_workflow_builder.py  test_writer.py
(+73 files in other folders)
