[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-recorder"
version = "0.4.1"
description = "Windows daemon that captures screenshots and analyzes employee workflows via GPT vision"
requires-python = ">=3.9"
dependencies = [
    "mss>=9.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "imagehash>=4.3",
    "psutil>=5.9",
    "httpx>=0.27",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
workflow-recorder = "workflow_recorder.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_recorder", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires GPT API access via config.test.toml",
    "e2e: end-to-end pipeline test (capture + analysis + output)",
]
